express/code/blocks/ratings/ratings.css
.section:not(.xxxl-spacing-static, .xxl-spacing-static, .xl-spacing-static, .xxxl-spacing, .xxl-spacing, .xl-spacing,
.l-spacing, .m-spacing, .s-spacing, .xs-spacing, .xxs-spacing) .ratings {
  margin-top: 80px;
}

.ratings {
  background: var(--color-gray-100);
  padding-top: 80px;
  padding-bottom: 0;
  text-align: center;
}

.section:has(.ax-columns, .content) + .section:not(.xxxl-spacing-static, .xxl-spacing-static, .xl-spacing-static, .xxxl-spacing, .xxl-spacing, .xl-spacing,
.l-spacing, .m-spacing, .s-spacing, .xs-spacing, .xxs-spacing) .ratings {
  margin-top: 0px;
}

.section.long-form:has(.ax-columns) + .section:not(.xxxl-spacing-static, .xxl-spacing-static, .xl-spacing-static, .xxxl-spacing, .xxl-spacing, .xl-spacing,
.l-spacing, .m-spacing, .s-spacing, .xs-spacing, .xxs-spacing) .ratings {
  margin-top: 40px;
}

.ratings > * {
  max-width: 1024px;
  margin: auto;
}

.ratings form {
  max-width: 265px;
  margin: 0 auto;
  padding-top: 5rem;
  width: 100%;
}

.ratings .ratings-heading {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.ratings .ratings-heading h3 {
  margin: 0;
}

.ratings .rating-stars {
  color: var(--color-info-accent);
  margin-top: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.ratings .rating-votes {
  display: none;
  font-size: var(--heading-font-size-s);
  color: var(--body-color);
  font-weight: 400;
  padding-top: 18px;
  padding-bottom: 10px;
}

.ratings.ratings_received .rating-votes {
  display: block;
}

.ratings .rating-votes strong {
  font-weight: 900;
}

.ratings .rating-stars svg {
  height: 30px;
  width: 30px;
  transform: translateY(2px);
  margin: 0 2px;
}

.ratings .slider .tooltip {
  position: absolute;
  background: var(--color-white);
  height: 60px;
  width: 60px;
  border-radius: 50%;
  top: 50%;
  transform: translate(2px, -50%);
  box-sizing: border-box;
  white-space: nowrap;
  text-align: center;
  box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.3);
  pointer-events: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: flex;
  justify-content: center;
  align-items: center;
  left: 82.2%;
  transition: left 0.3s, right 0.3s;
}

.ratings .slider-fill {
  min-width: 30px;
  height: 30px;
  width: 86.625%;
  position: absolute;
  top: 0;
  left: 0;
  background: var(--color-info-accent);
  pointer-events: none;
  border-radius: 60px;
  transition: width 0.3s;
}

.ratings .slider .tooltip > div {
  position: relative;
}

.ratings .slider .tooltip--text {
  position: absolute;
  background: var(--color-white);
  top: -80px;
  left: 50%;
  transform: translateX(-50%);
  box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.3);
  padding: 12px 20px;
  border-radius: 8px;
  font-size: 14px;
}

.ratings:not(.one-star):not(.two-stars):not(.three-stars):not(
    .four-stars
  ):not(.five-stars)
  .slider
  .tooltip--text {
  display: none;
}

.ratings .slider .tooltip--image,
.ratings .slider .tooltip--image img {
  height: 24px;
  width: 24px;
  object-fit: contain;
}

.ratings .slider {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  margin: 0;
}

.ratings .slider-bottom {
  display: flex;
  justify-content: space-between;
  padding: 32px 27px 80px 30px;
}

.ratings .slider-bottom .vertical-line {
  height: 20px;
  border-left: 2px solid var(--color-gray-400);
  position: relative;
}

.ratings .slider-bottom .stars {
  display: flex;
  position: absolute;
  left: calc(50% - 2px);
  transform: translateX(-50%);
  top: 60px;
  color: var(--color-info-accent-light);
  cursor: pointer;
  padding: 2px;
  background: transparent;
  border: none;
  white-space: nowrap;
}

.ratings .slider-bottom .stars svg {
  height: 24px;
  width: 24px;
  margin: 0 1px;
}

.ratings .slider-bottom .timer {
  position: absolute;
  left: calc(50% - 1px);
  transform: translateX(-50%);
  top: 2px;
  padding-top: 2px;
}

.ratings .slider-bottom .lottie {
  width: 24px;
  height: 24px;
}

@media (max-width: 899px) {
  .ratings .slider-bottom {
    padding: 20px 25px 50px 28px;
  }

  .ratings .slider-bottom .vertical-line {
    height: 5px;
    border-left: 2px solid var(--color-gray-300);
  }

  .ratings .slider-bottom .vertical-line .stars {
    top: 30px;
  }

  .ratings
  .slider-bottom
  .vertical-line:not(:first-child):not(:last-child)
  .stars {
    display: none;
  }

  .ratings .rating-stars {
    display: block;
    width: 100%;
  }

  .ratings .slider .tooltip {
    left: 67%;
  }

  .ratings .slider-fill {
    width: 76%;
  }

  .ratings .slider-bottom .stars svg {
    height: 20px;
    width: 20px;
  }

  .ratings.one-star .slider-bottom .vertical-line .stars,
  .ratings.two-stars .slider-bottom .vertical-line .stars,
  .ratings.three-stars .slider-bottom .vertical-line .stars,
  .ratings.four-stars .slider-bottom .vertical-line .stars,
  .ratings.five-stars .slider-bottom .vertical-line .stars {
    display: none;
  }

  .ratings.one-star .slider-bottom .vertical-line .stars.one-star,
  .ratings.two-stars .slider-bottom .vertical-line .stars.two-stars,
  .ratings.three-stars .slider-bottom .vertical-line .stars.three-stars,
  .ratings.four-stars .slider-bottom .vertical-line .stars.four-stars,
  .ratings.five-stars .slider-bottom .vertical-line .stars.five-stars {
    color: var(--color-info-accent);
    display: block;
  }

  .ratings .slider .tooltip--text {
    top: -68px;
    padding-top: 10px;
    padding-bottom: 10px;
  }

  .ratings form {
    padding-top: 4.5rem;
  }
}

.ratings.one-star .slider-bottom .stars.one-star,
.ratings.two-stars .slider-bottom .stars.two-stars,
.ratings.three-stars .slider-bottom .stars.three-stars,
.ratings.four-stars .slider-bottom .stars.four-stars,
.ratings.five-stars .slider-bottom .stars.five-stars {
  color: var(--color-info-accent);
  display: block;
}

.ratings .slider-comment {
  height: 0px;
  overflow: hidden;
  transition: height 0.4s;
}

.ratings .slider-comment.comment--appear {
  height: 220px;
}

.ratings .slider-comment.comment--appear.submit--appear {
  height: 336px;
}

.ratings .slider-comment label {
  font-family: var(--body-font-family);
  font-size: var(--body-font-size-xl);
  line-height: var(--body-line-height);
  min-height: var(--body-font-size-xl);
  box-sizing: content-box;
  font-weight: 700;
  margin: 0;
  padding: 0;
  text-align: center;
  width: 100%;
  display: block;
  padding-top: 32px;
}

.ratings .slider-comment textarea {
  resize: none;
  border: 2px solid var(--color-gray-400);
  border-radius: 6px;
  padding: 10px;
  font-family: var(--body-font-family);
  font-size: var(--body-font-size-m);
  color: var(--body-color);
  margin: 16px 0;
  background: var(--color-white);
  width: 100%;
  box-sizing: border-box;
  text-align: left;
}

.ratings form [type='submit'] {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: var(--body-font-family);
  font-size: var(--body-font-size-m);
  line-height: var(--body-line-height);
  color: var(--body-color);
  font-weight: 700;
  font-style: normal;
  text-align: center;
  cursor: pointer;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
  margin: 0;
  padding: 13px 1.5em 13px 1.5em;
  border-radius: 27px;
  transition: background-color 0.3s, color 0.3s, border 0.3s;
  border: 2px solid var(--color-gray-200);
  background: var(--color-gray-200);
}

.ratings form [type='submit']:hover {
  background-color: var(--color-gray-300);
  border-color: var(--color-gray-300);
}

.ratings form [type='submit']:focus {
  background-color: var(--color-gray-300);
  border-color: var(--color-gray-300);
  outline: none;
  box-shadow: 0 0 0 2px var(--color-white), 0 0 0 4px var(--color-info-accent);
}

.ratings form [type='submit']:focus:hover {
  background-color: var(--color-gray-400);
  border-color: var(--color-gray-400);
}

.ratings form [type='submit']:active {
  background-color: var(--color-gray-400);
  border-color: var(--color-gray-400);
}

.ratings form [type='submit'][aria-disabled='true'],
.ratings form [type='submit'][aria-disabled='true']:hover,
.ratings form [type='submit'][aria-disabled='true']:focus,
.ratings form [type='submit'][aria-disabled='true']:focus:hover,
.ratings form [type='submit'][aria-disabled='true']:active {
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #b9b9b9;
  cursor: default;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

/* Custom styling for the native range input, with cross-browser compatibility */
.ratings form [type='range'] {
  -webkit-appearance: none;
  margin: 0;
  width: 100%;
  height: 30px;
  border-radius: 60px;
  cursor: pointer;
  background: var(--color-info-accent-light);
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
.ratings form [type='range']::-moz-focus-outer {
  border: 0;
}
.ratings form [type='range']:focus {
  outline: 0;
}
.ratings form [type='range']:focus-visible {
  outline: 2px solid rgba(0, 0, 0, 0.55);
  outline-offset: -2px;
}
.ratings form [type='range']:focus-visible + .slider-fill {
  outline: 2px solid rgba(0, 0, 0, 0.55);
  outline-offset: -2px;
}
.ratings form [type='range']::-webkit-slider-runnable-track {
  cursor: pointer;
  transition: all 0.2s ease;
  border-radius: 60px;
  height: 30px;
  width: 100%;
  box-shadow: 0 0 0 rgba(0, 0, 0, 0);
  background: var(--color-info-accent-light);
  border: 0 solid rgba(0, 0, 0, 0);
}
.ratings form [type='range']::-webkit-slider-thumb {
  box-shadow: 0 0 0 rgba(0, 0, 0, 0);
  background: rgba(0, 0, 0, 0);
  border: 0px solid rgba(0, 0, 0, 0);
  border-radius: 60px;
  box-sizing: border-box;
  cursor: pointer;
  height: 60px;
  width: 60px;
  -webkit-appearance: none;
  margin-top: -15px;
}
.ratings form [type='range']::-moz-range-track {
  cursor: pointer;
  transition: all 0.2s ease;
  border-radius: 60px;
  width: 100%;
  box-shadow: 0 0 0 rgba(0, 0, 0, 0);
  background: var(--color-info-accent-light);
  border: 0 solid rgba(0, 0, 0, 0);
  height: 15px;
}
.ratings form [type='range']::-moz-range-thumb {
  box-shadow: 0 0 0 rgba(0, 0, 0, 0);
  background: rgba(0, 0, 0, 0);
  border: 0px solid rgba(0, 0, 0, 0);
  border-radius: 60px;
  box-sizing: border-box;
  cursor: pointer;
  height: 60px;
  width: 60px;
}

.ratings #rate-our-quick-action {
  max-width: 235px;
}

@media (max-width: 599px) {
  .ratings #rate-our-quick-action {
    max-width: 180px;
  }
}

.ratings .no-slider {
  padding-bottom: 80px;
}

.ratings .no-slider p {
  margin: 32px 0;
}

@media (min-width: 900px) {
  .ratings .no-slider {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .ratings .no-slider .button:any-link, .ratings .no-slider .con-button:any-link {
    padding-top: 8px;
    padding-bottom: 8px;
    margin-left: 1.5rem;
  }

  .ratings .rating-stars {
    margin: 0 20px;
  }

  .ratings .slider-bottom .stars {
    color: var(--color-gray-200);
  }

  .ratings .slider-bottom .timer {
    top: 26px;
  }

  .ratings .slider-bottom .lottie {
    width: 28px;
    height: 28px;
  }

  .ratings #rate-our-quick-action {
    max-width: unset;
  }

  .ratings .slider-comment label {
    padding-top: 50px;
  }

  .ratings form [type='submit'] {
    margin-top: 24px;
  }

  .ratings .slider-comment.comment--appear {
    height: 220px;
  }

  .ratings .slider-comment.comment--appear.submit--appear {
    height: 336px;
  }

  .ratings .slider-comment {
    padding: 0 30px;
  }

  .ratings form {
    max-width: 750px;
  }

  .ratings .rating-votes {
    padding-left: 56px;
    font-size: var(--heading-font-size-m);
  }
}

.ratings .ratings-scroll-anchor {
  padding-bottom: 76px;
}

html {
  /* Smooth-scroll when focus on "submit-rating" button after using slider */
  scroll-behavior: smooth;
}

